--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>اختبار خط ليون</title>
+    <title>اختبار خط عام الحرف اليدوية</title>
     <style>
+        /* الخطوة 1: تعريف ملف الخط الجديد */
         @font-face {
-            font-family: 'Lyon Arabic';
-            src: url('LyonArabicDisplay-Black.woff2') format('woff2');
+            font-family: 'Year of Handicrafts'; /* يمكنك اختيار أي اسم هنا */
+            src: url('TheYearofHandicrafts-Bold.woff') format('woff');
         }
 
+        /* الخطوة 2: تطبيق الخط على عناصر الصفحة */
         body {
-            font-family: 'Lyon Arabic', sans-serif;
+            font-family: 'Year of Handicrafts', sans-serif; /* استخدام نفس الاسم من الأعلى */
             text-align: center;
             font-size: 2.5em;
             padding-top: 50px;
@@ -19,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>أهلاً بالعالم، هذا هو خط ليون.</h1>
+    <h1>أهلاً بالعالم، هذا هو خط عام الحرف اليدوية.</h1>
     <p>تم تحميل الخط بنجاح.</p>
 </body>
 </html>
